Navigation links that wrap two lines should have a more appropriate line height to make sure individual items are discernablt

--- a/stylesheets/_component.nav-list.scss
+++ b/stylesheets/_component.nav-list.scss
@@ -29,8 +29,8 @@
 .nav-link {
 	color: #fff;
 	display: block;
-	line-height: 2.25em;
-	padding-left: 5px;
+	line-height: 1.5em;
+	padding: 8px 5px;
 	text-decoration: none;
 	width: 100%;
 
